...
      final response = await proto_session.SessionServiceClient(
        channel,
      ).register(request);
      if (response.success) {
        return null;
      }
      return "There was an error registering the user";
    } catch (e) {
      debugPrint('register error: $e');
      return "There was an error registering the user";
    }
  }

...
      final response = await proto_session.SessionServiceClient(
        channel,
      ).verifyEmail(request);
      if (response.success) {
        return null;
      }
      return "There was an error verifying the email";
    } catch (e) {
      debugPrint('verifyEmail error: $e');
      return "There was an error verifying the email";
    }
  }

...
